--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "set-function-length": "^1.2.2",
-    "universal-cookie": "^8.0.1"
+    "universal-cookie": "^8.0.1",
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
